2007-09-27  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/CombineEntryFeatureSelector.cs: Make sure
	  project features enabled by default are properly applied.
	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: Remove debug code.

2007-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.mdp: Fix warning level.
	* MonoDevelop.Ide.Gui/Workbench.cs: Use the TextEditorProperties class to
	  get the Properties object for the editor. Save the properties just after
	  closing the options dialog.

2007-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* icons/Icons.AboutImage, icons/SplashScreen.png: New logo.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml: Bump MD version.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/TreeViewPad.cs: Revert last change, it's causing
	  a regression.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/TreeViewPad.cs: Always check HasChildNodes before
	  calling BuildChildNodes. Notice that extensions may add new nodes, even
	  if the original node builder returns HasChildNodes=false.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/OpenFileInSolutionDialog.cs: Make sure icons
	  are constructed in the gui thread (just in case). UpdateList doesn't
	  need to perform the search if the dialog is not visible. Fixes a crash
	  when hidding and showing the dialog.
	* MonoDevelop.Ide.Gui/IdeStartup.cs: Print unhandled exception to the
	  output.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml: Added an Other section in the MD property
	  dialog and moved some options there to avoid too many branches.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/OutputProgressMonitor.cs,
	  MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs: Show output errors in
	  red.

2007-09-19  Lluis Sanchez Gual <lluis@novell.com> 
